--- a/_posts/2021-07-27-Kaggle_1.md
+++ b/_posts/2021-07-27-Kaggle_1.md
@@ -2,7 +2,8 @@
 layout: post
 title:  "Kaggle - 1.Titanic"
 date:   2021-07-27 
-categories: DataScience python kaggle titanic
+categories: Project 
+tags: DataScience kaggle
 ---
 # kaggle competition - 1. Titanic
 ---
