--- a/_posts/2021-08-01-EDA_1.md
+++ b/_posts/2021-08-01-EDA_1.md
@@ -2,7 +2,8 @@
 layout: post
 title:  "EDA - 1. nefilx"
 date:   2021-07-31
-categories: DataScience EDA python
+categories: Project
+tags: DataScience EDA python
 ---
 # EDA - 1. netflix data
 ---
