--- a/_posts/2022-01-17-CodingTest_17.md
+++ b/_posts/2022-01-17-CodingTest_17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 슷자 문자열과 영단어"
+title:  "Coding Test - 숫자 문자열과 영단어"
 date:   2022-01-17
 categories: CodingTest
 tags: python CodingTest
