--- a/_posts/2022-01-12-CodingTest_10.md
+++ b/_posts/2022-01-12-CodingTest_10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 위장"
+title:  "Programmers - 위장"
 date:   2022-01-12
 categories: CodingTest
 tags: python CodingTest
