--- a/_posts/2022-01-14-CodingTest_11.md
+++ b/_posts/2022-01-14-CodingTest_11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - K번째 수"
+title:  "Programmers - K번째 수"
 date:   2022-01-14
 categories: CodingTest
 tags: python CodingTest
