--- a/_posts/2022-01-15-CodingTest_13.md
+++ b/_posts/2022-01-15-CodingTest_13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - H-index"
+title:  "Programmers - H-index"
 date:   2022-01-15
 categories: CodingTest
 tags: python CodingTest
