--- a/_posts/2022-01-15-CodingTest_14.md
+++ b/_posts/2022-01-15-CodingTest_14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 모의고사"
+title:  "Programmers - 모의고사"
 date:   2022-01-15
 categories: CodingTest
 tags: python CodingTest
