--- a/_posts/2022-01-16-CodingTest_15.md
+++ b/_posts/2022-01-16-CodingTest_15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 소수 찾기"
+title:  "Programmers - 소수 찾기"
 date:   2022-01-16
 categories: CodingTest
 tags: python CodingTest
