--- a/_posts/2022-01-16-CodingTest_16.md
+++ b/_posts/2022-01-16-CodingTest_16.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 카펫"
+title:  "Programmers - 카펫"
 date:   2022-01-16
 categories: CodingTest
 tags: python CodingTest
