--- a/_posts/2022-01-18-CodingTest_18.md
+++ b/_posts/2022-01-18-CodingTest_18.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 타겟 넘버"
+title:  "Programmers - 타겟 넘버"
 date:   2022-01-18
 categories: CodingTest
 tags: python CodingTest
