--- a/_posts/2022-01-23-CodingTest_19.md
+++ b/_posts/2022-01-23-CodingTest_19.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 네트워크"
+title:  "Programmers - 네트워크"
 date:   2022-01-23
 categories: CodingTest
 tags: python CodingTest
