--- a/_posts/2022-01-24-CodingTest_20.md
+++ b/_posts/2022-01-24-CodingTest_20.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 단어 변환"
+title:  "Programmers - 단어 변환"
 date:   2022-01-24
 categories: CodingTest
 tags: python CodingTest
