--- a/_posts/2022-03-17-CodingTest_21.md
+++ b/_posts/2022-03-17-CodingTest_21.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 여행경로"
+title:  "Programmers - 여행경로"
 date:   2022-03-17
 categories: CodingTest
 tags: python CodingTest
