--- a/_posts/2022-01-14-CodingTest_12.md
+++ b/_posts/2022-01-14-CodingTest_12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Coding Test - 가장 큰 수"
+title:  "Programmers - 가장 큰 수"
 date:   2022-01-14
 categories: CodingTest
 tags: python CodingTest
