--- a/_posts/2022-03-18-CodingTest_22.md
+++ b/_posts/2022-03-18-CodingTest_22.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title:  "Coding Test - 입국심사"
+title:  "Programmers - 입국심사"
 date:   2022-03-18
 categories: CodingTest
 tags: python CodingTest
 ---
-# 여행경로
+# 입국심사
 ---
 
 ## 개요
