--- a/_posts/2022-03-31-CodingTest_31.md
+++ b/_posts/2022-03-31-CodingTest_31.md
@@ -27,7 +27,7 @@ def minNumberOperations(self, target: List[int]) -> int:
         # 홀수번째 peak는 under peak이고 짝수번째 peak는 upper peak이다
         # peak를 한번 씩 탐색하여 각자 대응하는 upper peak와 under peak를 빼주고 answer에 더해준다 -> n번 독립시행
         # peak를 다시한번 탐색하여 under peak중 가장 큰 수를 answer에 더해준다 -> n번 독립시행
-        # 결과적으로 O(3n)으로 마무리 가능하다.
+        # 결과적으로 O(n)으로 마무리 가능하다.
         
         p_value = 0
         p_status = 'up'
